@@ -1,3 +1,7 @@
+2005-04-06  Peter Vandersteegen  <Peter.Vandersteegen@UGent.be>
+
+	* camfr_wrap.cpp: Fix get_kt() and set_kt().
+
 2005-03-01  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* geometry3d.py: Implement add_flipped.
